# OpenEnv-NeuroOS-Benchmark

./: .dockerignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  results.jsonl  run_eval.py  test_live.py  test_llm.py  validate-submission.sh  validate.py
Logic/: __init__.py  biometric_simulator.py  grader.py  linter.py  preview.py  schema.py  tasks.py  vdom_generator.py
person_a/: __init__.py  environment.py  mutation_engine.py
server/: app.py
tests/: test_grader.py
